fix label color in dark mode

--- a/public/styles.css
+++ b/public/styles.css
@@ -121,7 +121,6 @@ body {
 
     & a {
       text-decoration: none;
-      color: inherit;
 
       &:hover {
         text-decoration: underline;
